--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -283,8 +283,8 @@
   "app_settings.about_tab_delegable_field_description": "Velg om appen skal være delegerbar.",
   "app_settings.about_tab_delegable_field_label": "Delegerbar app",
   "app_settings.about_tab_delegable_show_text": "Appen er {{shouldText}} delegerbar.",
-  "app_settings.about_tab_description_field_description": "Forklar hva appen gjør og hvordan sluttbrukere kan bruke den",
-  "app_settings.about_tab_description_field_label": "Beskriv av appen",
+  "app_settings.about_tab_description_field_description": "Beskriv hvem som skal bruke appen og hva den skal brukes til. Skriv kort, gjerne 20-30 ord.",
+  "app_settings.about_tab_description_field_label": "Kort beskrivelse av appen",
   "app_settings.about_tab_enterprise_user_field_description": "Brukeren som opptrer på vegne av en part kan være en virksomhetsbruker.",
   "app_settings.about_tab_enterprise_user_field_label": "Virksomhetsbruker",
   "app_settings.about_tab_enterprise_user_show_text": "Appen har {{shouldText}} Virksomhetsbruker aktivert.",
@@ -304,9 +304,9 @@
   "app_settings.about_tab_keywords_description": "Ord som er enkle å søke på. Skill hvert ord med komma \",\".",
   "app_settings.about_tab_keywords_label": "Nøkkelord for appen (bokmål, nynorsk og engelsk)",
   "app_settings.about_tab_language_translation_header": "Oversettelse av {{field}}",
-  "app_settings.about_tab_name_description": "Velg et navn som sluttbrukere forstår",
+  "app_settings.about_tab_name_description": "Velg et navn som sluttbrukerne lett forstår.",
   "app_settings.about_tab_name_error": "Du må fylle ut App-navn. Du kan endre navnet helt frem til du skal publisere appen.",
-  "app_settings.about_tab_name_label": "Navngi appen",
+  "app_settings.about_tab_name_label": "Navn på appen",
   "app_settings.about_tab_repo_description": "Dette er en unik ID for appen både i URL-er og i API-er.",
   "app_settings.about_tab_repo_label": "Navn på repositoriet",
   "app_settings.about_tab_reset_button": "Avbryt",
