--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -268,16 +268,19 @@
   "app_settings.about_tab_available_for_type_legal": "Hovedenhet (juridisk enhet)",
   "app_settings.about_tab_available_for_type_private": "Privatperson",
   "app_settings.about_tab_available_for_type_self_registered": "Selvregistrert bruker",
-  "app_settings.about_tab_contact_point_add_button_text": "Legg til ekstra kontakt",
+  "app_settings.about_tab_contact_point_add_button_text": "Legg til ny kontakt",
   "app_settings.about_tab_contact_point_delete_button_text": "Slett kontakt {{index}}",
   "app_settings.about_tab_contact_point_delete_confirm": "Er du sikker på at du vil slette denne kontakten?",
-  "app_settings.about_tab_contact_point_fieldset_category_description": "Du bruker kategorier til å gruppere underliggende felter, for eksempel i \"Brukerstøtte\", \"Tilbakemeldinger\", \"Ring oss\", \"Chat med oss\" eller lignende.",
-  "app_settings.about_tab_contact_point_fieldset_category_label": "Kategori",
+  "app_settings.about_tab_contact_point_dialog_add_title": "Legg til kontaktinformasjon",
+  "app_settings.about_tab_contact_point_fieldset_category_description": "Legg inn en beskrivende tittel, for eksempel \"Ring oss\", \"Brukerstøtte\" eller \"Chat med oss\".",
+  "app_settings.about_tab_contact_point_fieldset_category_label": "Tittel som beskriver hva det gjelder",
   "app_settings.about_tab_contact_point_fieldset_contact_page_label": "Lenke til kontaktsiden",
-  "app_settings.about_tab_contact_point_fieldset_description": "Fyll ut minst ett av feltene",
-  "app_settings.about_tab_contact_point_fieldset_email_label": "E-post",
+  "app_settings.about_tab_contact_point_fieldset_description": "Velg hvordan sluttbrukerne kan kontakte organisasjonen",
+  "app_settings.about_tab_contact_point_fieldset_email_label": "E-postadresse",
   "app_settings.about_tab_contact_point_fieldset_legend": "Kontaktinformasjon {{index}}",
-  "app_settings.about_tab_contact_point_fieldset_telephone_label": "Telefon",
+  "app_settings.about_tab_contact_point_fieldset_link_label": "Lenke",
+  "app_settings.about_tab_contact_point_fieldset_telephone_label": "Telefonnummer",
+  "app_settings.about_tab_contact_point_fieldset_title_desc_label": "Beskrivende tittel",
   "app_settings.about_tab_created_by": "Opprettet av",
   "app_settings.about_tab_created_date": "Dato: {{date}}",
   "app_settings.about_tab_created_for_repo": "Opprettet for",
