chore: implement addbutton for optional fileds (#17608)

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -299,10 +299,10 @@
   "app_settings.about_tab_error_usage_string_right_description": "delegeringstekst",
   "app_settings.about_tab_error_usage_string_service_name": "Navngi appen",
   "app_settings.about_tab_heading": "Om appen",
-  "app_settings.about_tab_homepage_field_description": "Lenke til informasjon om hvor sluttbrukerne kan finne appen og informasjon om den.",
-  "app_settings.about_tab_homepage_field_label": "Hjemmeside",
-  "app_settings.about_tab_keywords_description": "Ord som er enkle å søke på. Skill hvert ord med komma \",\".",
-  "app_settings.about_tab_keywords_label": "Nøkkelord for appen (bokmål, nynorsk og engelsk)",
+  "app_settings.about_tab_homepage_field_description": "Lim inn lenke til siden der sluttbrukere finner appen og informasjon om den.",
+  "app_settings.about_tab_homepage_field_label": "Legg inn lenke til egen hjemmeside",
+  "app_settings.about_tab_keywords_description": "Skill hvert nøkkelord med komma \",\".",
+  "app_settings.about_tab_keywords_label": "Skriv nøkkelord som gjør det enkelt å søke på appen",
   "app_settings.about_tab_language_translation_header": "Oversettelse av {{field}}",
   "app_settings.about_tab_name_description": "Velg et navn som sluttbrukerne lett forstår.",
   "app_settings.about_tab_name_error": "Du må fylle ut App-navn. Du kan endre navnet helt frem til du skal publisere appen.",
