feat: Custom templates mvp (#17497)
Co-authored-by: Stephanie Bogevik <stephanie.buadu@kreftforeningen.no>
Co-authored-by: Nina Kylstad <nkylstad@gmail.com>
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -511,6 +511,10 @@
   "dashboard.my_data_models": "Mine datamodeller",
   "dashboard.my_resources": "Mine ressurser",
   "dashboard.name": "Navn",
+  "dashboard.new_application_form.select_templates": "Velg mal fra listen",
+  "dashboard.new_application_form.select_templates_default": "Ingen mal valgt (standard tom mal brukes)",
+  "dashboard.new_application_form.select_templates_description": "Du kan velge en mal for å komme raskt i gang med å bygge appen din. Malene inneholder forhåndsdefinerte sider, komponenter og datamodeller som passer til ulike typer apper. Velger du ingenting vil appen starte som en tom app basert på vår standard mal.",
+  "dashboard.new_application_form.show_advanced_options": "Vis avanserte alternativer",
   "dashboard.new_service": "Opprett ny app",
   "dashboard.no_repos_result": "Fant ingen apper",
   "dashboard.open_in_new": "Åpne i ny fane",
