chore: update text in optional fileds in about app page

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -300,9 +300,9 @@
   "app_settings.about_tab_error_usage_string_service_name": "Navngi appen",
   "app_settings.about_tab_heading": "Om appen",
   "app_settings.about_tab_homepage_field_description": "Lim inn lenke til siden der sluttbrukere finner appen og informasjon om den.",
-  "app_settings.about_tab_homepage_field_label": "Legg inn lenke til egen hjemmeside",
+  "app_settings.about_tab_homepage_field_label": "Legg inn lenke til egen infoside der sluttbrukerne finner mer informasjon om appen",
   "app_settings.about_tab_keywords_description": "Skill hvert nøkkelord med komma \",\".",
-  "app_settings.about_tab_keywords_label": "Skriv nøkkelord som gjør det enkelt å søke på appen",
+  "app_settings.about_tab_keywords_label": "Oppgi søkeord som gjør det enklere å finne appen når du skal gi fullmakter",
   "app_settings.about_tab_language_translation_header": "Oversettelse av {{field}}",
   "app_settings.about_tab_name_description": "Velg et navn som sluttbrukerne lett forstår.",
   "app_settings.about_tab_name_error": "Du må fylle ut App-navn. Du kan endre navnet helt frem til du skal publisere appen.",
