add error message for resourceregistry publishing errors

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -94,6 +94,7 @@
   "api_errors.InvalidOptionsFormat": "Kodelisten har ugyldig format.",
   "api_errors.ModelWithTheSameTypeNameExists": "Det er allerede et skjema som produserer modellen med navnet du har oppgitt",
   "api_errors.ResourceNotFound": "Studio prøver å finne en fil som ikke finnes.",
+  "api_errors.ResourcePublishingError": "Det oppsto en feil under publisering av metadata til Ressursregisteret.",
   "api_errors.Unauthorized": "Handlingen du prøver å utføre krever rettigheter du ikke har. Du blir nå logget ut.",
   "api_errors.UploadedImageNotValid": "Det opplastede bildet er ikke en gyldig filtype",
   "app_content_library.code_lists.empty": "Det finnes ingen kodelister i biblioteket.",
@@ -384,7 +385,7 @@
   "app_validation.app_metadata.description.nb.required": "Beskrivelse av appen på bokmål er påkrevd.",
   "app_validation.app_metadata.description.nn.required": "Beskrivelse av appen på nynorsk er påkrevd.",
   "app_validation.app_metadata.description.required": "Beskrivelse av appen er påkrevd.",
-  "app_validation.app_metadata.errors_need_fixing": "For å kunne publisere appen til ressursregisteret må disse feilene rettes:",
+  "app_validation.app_metadata.errors_need_fixing": "For å kunne publisere appen til Ressursregisteret må disse feilene rettes:",
   "app_validation.app_metadata.identifier.required": "App-identifikator er påkrevd.",
   "app_validation.app_metadata.right_description.en.required": "Delegeringstekst av appen på engelsk er påkrevd.",
   "app_validation.app_metadata.right_description.nb.required": "Delegeringstekst av appen på bokmål er påkrevd.",
