--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -2315,6 +2315,14 @@
   "ux_editor.settings.navigation_tab_description": "Her setter du rekkefølgen på oppgavene i navigasjonen. Sjekk at navigasjonen følger arbeidsflyten. For utfyllingsoppgaver kan du sette opp flere detaljer for navigasjon. Det gjør du når du utformer sider på selve oppgaven.",
   "ux_editor.settings.navigation_tab_header": "Navigasjonsmeny",
   "ux_editor.settings.navigation_tab_loading": "Laster inn navigasjonsoppgaver",
+  "ux_editor.settings.navigation_validation_all_tasks_description": "På øverste nivå så setter du regler for navigeringen på tvers av alle oppgaver i hele appen. Du kan derfor kun lage en regel på dette nivået.",
+  "ux_editor.settings.navigation_validation_all_tasks_header": "Validering i alle oppgaver",
+  "ux_editor.settings.navigation_validation_description": "Du kan sette valideringer i navigasjonen på alle 3 nivåene. Velger du å sette på et lavere nivå vil den overstyre valideringer satt på høyere nivå.",
+  "ux_editor.settings.navigation_validation_header": "Validering i navigasjon",
+  "ux_editor.settings.navigation_validation_specific_page_description": "Her kan du sette en regel som skal gjelde for en spesifikk side eller flere sider. Du kan sette ulike regler for ulike sider.",
+  "ux_editor.settings.navigation_validation_specific_page_header": "Validering i enkeltsider",
+  "ux_editor.settings.navigation_validation_specific_task_description": "Her kan du sette en regel som skal gjelde for en spesifikk oppgave eller flere oppgaver. Du kan sette ulike regler for ulike oppgaver.",
+  "ux_editor.settings.navigation_validation_specific_task_header": "Validering i enkeltoppgaver",
   "ux_editor.settings.other_settings": "Andre innstillinger",
   "ux_editor.settings.wip_message": "Denne fanen er under utvikling - innhold kommer snart.",
   "ux_editor.show_icon": "Skal ikonet vises?",
