add warning message to the 'create release' page

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -172,6 +172,8 @@
   "app_create_release.status_popover": "Status for neste bygg",
   "app_create_release.still_building_release": "Bygger fortsatt versjon {{version}}",
   "app_create_release.validation_errors": "Det er valideringsfeil som må rettes før publisering",
+  "app_create_release.warning": "Vi anbefaler ikke å bygge en ny versjon med valideringsfeil.",
+  "app_create_release.warning_message": "Vi har funnet valideringsfeil i dine siste endringer. Vi anbefaler at du retter opp feilene i <0>denne listen</0> før du bygger en ny versjon av appen.",
   "app_create_release_errors.check_status_on_build_error": "Det har skjedd en teknisk feil, så vi får ikke oppdatert statusen på bygget ditt. Vi prøver å sjekke statusen på nytt …",
   "app_create_release_errors.fetch_release_failed": "Det har skjedd en teknisk feil som gjør at du ikke kan bygge versjoner akkurat nå. Prøv igjen senere. Hvis problemet fortsetter, <a>ta kontakt med oss</a>.",
   "app_data_modelling.landing_dialog_create": "Lag en ny datamodell",
@@ -394,7 +396,7 @@
   "app_validation.app_metadata.title.nb.required": "Navn på appen på bokmål mangler.",
   "app_validation.app_metadata.title.nn.required": "Navn på appen på nynorsk mangler.",
   "app_validation.app_metadata.title.required": "Navn på appen mangler.",
-  "app_validation.app_metadata.warnings": "Foer du gaar videre, anbefaler vi at du retter opp disse feilene:",
+  "app_validation.app_metadata.warnings": "Før du går videre, anbefaler vi at du retter opp disse feilene:",
   "branching.new_branch_dialog.branch_name_label": "Navn på gren",
   "branching.new_branch_dialog.branch_name_placeholder": "F.eks. feature/min-nye-funksjon",
   "branching.new_branch_dialog.create": "Opprett gren",
