--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -387,6 +387,7 @@
   "app_validation.app_metadata.description.nn.required": "Beskrivelse av appen på nynorsk mangler.",
   "app_validation.app_metadata.description.required": "Beskrivelse av appen mangler.",
   "app_validation.app_metadata.errors_need_fixing": "For å kunne publisere appen til ressursregisteret må disse feilene rettes:",
+  "app_validation.app_metadata.heading": "Valideringsfeil på innstillinger om appen.",
   "app_validation.app_metadata.identifier.required": "App-identifikator mangler.",
   "app_validation.app_metadata.right_description.en.required": "Delegeringstekst av appen på engelsk mangler.",
   "app_validation.app_metadata.right_description.nb.required": "Delegeringstekst av appen på bokmål mangler.",
@@ -397,6 +398,7 @@
   "app_validation.app_metadata.title.nn.required": "Navn på appen på nynorsk mangler.",
   "app_validation.app_metadata.title.required": "Navn på appen mangler.",
   "app_validation.app_metadata.warnings": "Før du går videre, anbefaler vi at du retter opp disse feilene:",
+  "app_validation.heading": "Valideringsfeil.",
   "branching.new_branch_dialog.branch_name_label": "Navn på gren",
   "branching.new_branch_dialog.branch_name_placeholder": "F.eks. feature/min-nye-funksjon",
   "branching.new_branch_dialog.create": "Opprett gren",
