--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -322,7 +322,7 @@
   "app_settings.about_tab_visibility_and_delegation_info_hidden_no_delegation": "Appen er skjult og sluttbruker kan ikke gi fullmakt til andre i tilgangsstyring",
   "app_settings.about_tab_visibility_and_delegation_info_visible_can_delegate": "Appen er synlig og sluttbruker kan gi fullmakt til andre i tilgangsstyring",
   "app_settings.about_tab_visibility_and_delegation_title": "Velg synlighet og fullmakter i Altinn",
-  "app_settings.about_tab_visibility_and_delegation_visible_label": "Vis appen i tilgangstyring på Altinn.no",
+  "app_settings.about_tab_visibility_and_delegation_visible_label": "Vis appen i tilgangsstyring på Altinn.no",
   "app_settings.about_tab_visibility_and_delegation_warning_hidden_delegate_via_api": "Appen er skjult, men sluttbruker kan nå tilgangsstyring via API og gi fullmakt til andre",
   "app_settings.access_control_tab_checkbox_description": "Her velger du hvem som eier og kan starte appen. “Alle” er valgt som standard. Du må minst velge én.",
   "app_settings.access_control_tab_checkbox_legend_label": "Velg hvem som kan starte appen",
