chore: implement visibility and delegering in a card (#17716)

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -277,9 +277,6 @@
   "app_settings.about_tab_contact_point_fieldset_legend": "Kontaktinformasjon {{index}}",
   "app_settings.about_tab_contact_point_fieldset_telephone_label": "Telefon",
   "app_settings.about_tab_created_by": "Opprettet av",
-  "app_settings.about_tab_delegable_field_description": "Velg om appen skal være delegerbar.",
-  "app_settings.about_tab_delegable_field_label": "Delegerbar app",
-  "app_settings.about_tab_delegable_show_text": "Appen er {{shouldText}} delegerbar.",
   "app_settings.about_tab_description_field_description": "Beskriv hvem som skal bruke appen og hva den skal brukes til. Skriv kort, gjerne 20-30 ord.",
   "app_settings.about_tab_description_field_label": "Kort beskrivelse av appen",
   "app_settings.about_tab_enterprise_user_field_description": "Brukeren som opptrer på vegne av en part kan være en virksomhetsbruker.",
@@ -296,10 +293,10 @@
   "app_settings.about_tab_error_usage_string_right_description": "delegeringstekst",
   "app_settings.about_tab_error_usage_string_service_name": "Navngi appen",
   "app_settings.about_tab_heading": "Om appen",
-  "app_settings.about_tab_homepage_field_description": "Lim inn lenke til siden der sluttbrukere finner appen og informasjon om den.",
-  "app_settings.about_tab_homepage_field_label": "Legg inn lenke til egen infoside der sluttbrukerne finner mer informasjon om appen",
+  "app_settings.about_tab_homepage_field_description": "Lim inn lenke til siden der sluttbruker finner appen og informasjon om den.",
+  "app_settings.about_tab_homepage_field_label": "Legg inn lenke til egen infoside der sluttbruker finner mer informasjon om appen",
   "app_settings.about_tab_keywords_description": "Skill hvert nøkkelord med komma \",\".",
-  "app_settings.about_tab_keywords_label": "Oppgi søkeord som gjør det enklere å finne appen når du skal gi fullmakter",
+  "app_settings.about_tab_keywords_label": "Oppgi søkeord som gjør det enklere å finne appen når sluttbruker skal gi fullmakter",
   "app_settings.about_tab_language_translation_header": "Oversettelse av {{field}}",
   "app_settings.about_tab_name_description": "Velg et navn som sluttbrukerne lett forstår.",
   "app_settings.about_tab_name_error": "Du må fylle ut App-navn. Du kan endre navnet helt frem til du skal publisere appen.",
@@ -308,8 +305,6 @@
   "app_settings.about_tab_repo_label": "Navn på repositoriet",
   "app_settings.about_tab_reset_button": "Avbryt",
   "app_settings.about_tab_reset_confirmation": "Er du sikker på at du vil avbryte? Alle endringene du har gjort, blir slettet.",
-  "app_settings.about_tab_right_description_field_description": "Forklar sluttbrukerne hvilke rettigheter som blir delegert og hva den som får rettighetene kan utføre.",
-  "app_settings.about_tab_right_description_field_label": "Delegeringstekst",
   "app_settings.about_tab_save_button": "Lagre",
   "app_settings.about_tab_self_identified_user_field_description": "Brukeren som opptrer på vegne av en part kan være en selvidentifisert bruker.",
   "app_settings.about_tab_self_identified_user_field_label": "Selvidentifisert bruker",
@@ -320,11 +315,15 @@
   "app_settings.about_tab_status_field_label": "Velg en status",
   "app_settings.about_tab_status_under_development": "Under utvikling",
   "app_settings.about_tab_status_withdrawn": "Trukket tilbake",
-  "app_settings.about_tab_switch_should_not": "ikke",
   "app_settings.about_tab_translation_box_alert": "For å kunne publisere appen må du legge til nynorsk og engelsk oversettelse.",
-  "app_settings.about_tab_visible_description": "Etter publisering blir appen synlig på Altinn.no.",
-  "app_settings.about_tab_visible_label": "Synlighet",
-  "app_settings.about_tab_visible_show_text": "Appen er {{shouldText}} synlig.",
+  "app_settings.about_tab_visibility_and_delegation_delegable_label": "Gi andre fullmakt til appen",
+  "app_settings.about_tab_visibility_and_delegation_description_label": "Beskriv fullmakten",
+  "app_settings.about_tab_visibility_and_delegation_description_text": "Skriv en forklaring her når sluttbruker skal gi en annen sluttbruker fullmakt til appen. Husk å beskrive hvilke rettigheter de får og hva de skal gjøre.",
+  "app_settings.about_tab_visibility_and_delegation_info_hidden_no_delegation": "Appen er skjult og sluttbruker kan ikke gi fullmakt til andre i tilgangsstyring",
+  "app_settings.about_tab_visibility_and_delegation_info_visible_can_delegate": "Appen er synlig og sluttbruker kan gi fullmakt til andre i tilgangsstyring",
+  "app_settings.about_tab_visibility_and_delegation_title": "Velg synlighet og fullmakter i Altinn",
+  "app_settings.about_tab_visibility_and_delegation_visible_label": "Vis appen i tilgangsstyring på Altinn.no",
+  "app_settings.about_tab_visibility_and_delegation_warning_hidden_delegate_via_api": "Appen er skjult, men sluttbruker kan nå tilgangsstyring via API og gi fullmakt til andre",
   "app_settings.access_control_tab_checkbox_description": "Her velger du hvem som eier og kan starte appen. “Alle” er valgt som standard. Du må minst velge én.",
   "app_settings.access_control_tab_checkbox_legend_label": "Velg hvem som kan starte appen",
   "app_settings.access_control_tab_heading": "Oppstartskontroll for appen",
