--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -73,6 +73,7 @@
   "admin.metrics.heading": "Statistikk fra siste",
   "admin.metrics.ready_pods": "av podene er klare",
   "ai_assistant.about_assistant": "Om assistenten",
+  "ai_assistant.access_denied": "KI-assistenten er foreløpig bare åpen for Testdepartementet",
   "ai_assistant.add_attachment": "Last opp vedlegg",
   "ai_assistant.allow_app_changes": "Tillat endringer i appen",
   "ai_assistant.assistant_first_message": "Hva kan jeg hjelpe med?",
